Fix: gap above sidebar menu on mobile

--- a/src/components/organisms/sidebar/sidebar.scss
+++ b/src/components/organisms/sidebar/sidebar.scss
@@ -34,7 +34,7 @@
         height 0.5s,
         background-color 0.5s;
       z-index: 1;
-      top: px-to-rem(96);
+      top: px-to-rem(56);
       left: 0;
       padding: px-to-rem($spacer) px-to-rem($spacer-l);
       font-size: px-to-rem(16);
